se creó la hoja de estilos

--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
     <header>Dereck Ruiz</header>
     <br>
     <p>Este es el portafolio de evidencias para la asignatura de programación web y pruebas</p>
+
+    <br>
+    <p>Aquí vamos a crear un portafolio para cada </p>
 </body>
 </html>
