--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ejemplo de manejador de versiones</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <header>Dereck Ruiz</header>
@@ -11,6 +12,6 @@
     <p>Este es el portafolio de evidencias para la asignatura de programación web y pruebas</p>
 
     <br>
-    <p>Aquí vamos a crear un portafolio para cada </p>
+    <p>Aquí vamos a crear un portafolio para cada práctica</p>
 </body>
 </html>
