--- a/02PrimerosPasos/estructura.html
+++ b/02PrimerosPasos/estructura.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <title>Estructura Básica</title>
+        <link rel="stylesheet" href="./css/styleestructura.css">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="css/style.css" rel="stylesheet">
