--- a/02PrimerosPasos/estructura.html
+++ b/02PrimerosPasos/estructura.html
@@ -11,7 +11,7 @@
         <div class="container-main">
             <div class="container-header">
                 <header>
-                    <nav><h1>>Aquí va un menú</h1></nav>
+                    <nav><h1>Aquí va un menú</h1></nav>
                 </header>
             </div>
             <div class="container-body">
