--- a/01 curriculo/curriculo.html
+++ b/01 curriculo/curriculo.html
@@ -4,7 +4,7 @@
         <title>Dereck Ruiz</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="css/style.css" rel="stylesheet">
+        <link href="./css/stylecurriculo.css" rel="stylesheet">
     </head>
     <body>
         <div class="container-main">
@@ -27,6 +27,7 @@
             <div class="container-footer">
                 <footer>
                     <h2>Esta etiqueta sirve para el pie de página, por lo general puede haber micrositios, aviso de privacidad, redes sociales</h2>
+                    <a href="../index.html">Regresar a la página principal</a>
                 </footer>
             </div>
         </div>
