--- a/index.html
+++ b/index.html
@@ -13,5 +13,23 @@
 
     <br>
     <p>Aquí vamos a crear un portafolio para cada práctica</p>
+    <p>Cosas para tu Examen Parte 1
+        Queremos que tu portafolio sea hermoso y kawaii, 100% personalizado, se admite todo TODO.
+        Deberan de aplicar las reglas de Creación de Estilos de acuerdo a Material Desing
+        Primero Paleta de Colores 
+        Fuente o Tipografia
+        Iconografia
+        Imagenes
+    </p>
+    <table class="container-table">
+        <th>
+            <td><a href="./01curriculo/curriculo.html">01 currículo</a></td>
+            <td>Descripción de la práctica</td>
+        </th>
+        <th>
+            <td><a href="./03 login/inicio.html">03 login</a></td>
+            <td>Descripción de la práctica</td>
+        </th>
+    </table>
 </body>
 </html>
