se mejoró la estructura de la tabla de prácticas (portafolio)

--- a/index.html
+++ b/index.html
@@ -22,14 +22,32 @@
         Imagenes
     </p>
     <table class="container-table">
-        <th>
-            <td><a href="./01curriculo/curriculo.html">01 currículo</a></td>
-            <td>Descripción de la práctica</td>
-        </th>
-        <th>
-            <td><a href="./03 login/inicio.html">03 login</a></td>
-            <td>Descripción de la práctica</td>
-        </th>
+        <thead>
+            <tr>
+                <th>Práctica</th>
+                <th>Descripción</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>
+                    <a href="./01 curriculo/curriculo.html">01 Currículo</a>
+                </td>
+                <td>Crear un currículo en HTML y CSS</td>
+            </tr>
+            <tr>
+                <td>
+                    <a href="./02 PrimerosPasos/estructura.html">02 Estructura</a>
+                </td>
+                <td>---</td>
+            </tr>
+            <tr>
+                <td>
+                    <a href="./03 login/inicio.html">03 Login</a>
+                </td>
+                <td>Crear un Login en HTML y CSS</td>
+            </tr>
+            </tbody>
     </table>
 </body>
 </html>
