se agregó hipervínculo al index en el currículo

--- a/01 curriculo/curriculo.html
+++ b/01 curriculo/curriculo.html
@@ -1,35 +1,113 @@
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <title>Dereck Ruiz</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="./css/stylecurriculo.css" rel="stylesheet">
-    </head>
-    <body>
-        <div class="container-main">
-            <div class="container-nav">
-                <header>
-                    <nav>Aquí va un menú</nav>
-                </header>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./CSS/stylecurriculo.css">
+    <title>Currículum</title>
+</head>
+<body>
+    <div class="container-main">
+        <div class="container-nav">
+            <header>
+                <img src="./img/Screenshot (290).png" alt="Fotografía personal simple" class="img-personal">
+            </header>
+            <div class="block">
+                <h2>Contacto</h2>
+                <ul>
+                    <li>(+52) 56 2187 0839</li>
+                    <li>dcabrerar2300@alumno.ipn.mx</li>
+                </ul>
             </div>
-            <div class="container-body">
-                <section>
-                    <h2>aquí va una sección (hablar de mí)</h2>
-                </section>
-                <article>
-                    <h2>Sirve principalmente para colocar un parrafo en columas, también como un banner de publicidad</h2>
-                </article>
-                <aside>
-                    <h2>Esta etiqueta por lo general sirve para publicidad, anuncios, ads</h2>
-                </aside>
+            <div class="block">
+                <h2>Habilidades</h2>
+                <ul>
+                    <li>Liderazgo</li>
+                    <li>Comunicación asertiva</li>
+                    <li>Resiliencia</li>
+                    <li>Resolución de problemas</li>
+                    <li>Habilidad oratoria</li>
+                    <li>Trabajo en equipo</li>
+                </ul>
             </div>
-            <div class="container-footer">
-                <footer>
-                    <h2>Esta etiqueta sirve para el pie de página, por lo general puede haber micrositios, aviso de privacidad, redes sociales</h2>
-                    <a href="../index.html">Regresar a la página principal</a>
-                </footer>
+            <div class="block">
+                <h2>Educación</h2>
+                <ul>
+                    <li>
+                        Cursando carrera técnica en programación<br>
+                        CECyT 9 "Juan de Dios Bátiz" (IPN)<br>
+                        2023-2026
+                    </li>
+                    <br>
+                    <li>
+                        PM en proyectos menores<br>
+                        CECyT 9<br>
+                        2024-2025
+                    </li>
+                </ul>
             </div>
         </div>
-    </body>
+        <div class="container-body">
+            <div class="container-body-header">
+                <header class="profile-header">
+                <h1>Dereck Cabrera</h1>
+                <p>Técnico en programación</p>
+                </header>
+            </div>
+
+            <div class="subdiv">
+                <section class="about">
+                <br>
+                <br>
+                <h2>Acerca de mí</h2>
+                <p class="aboutme">
+                    Aspirante a técnico en programación, con un año de experiencia,
+                    especializado en la dirección de proyectos menores en equipos pequeños.
+                    Tengo conociemientos de programación y lenguajes de programación,
+                    además de habilidades de Liderazgo y comunicación, con una gran
+                    capacidad de trabajo en equipo
+                </p>
+            </section>
+
+            <br>
+            <br>
+            <br>
+            <hr class="divider">
+
+            <section class="experience">
+                <h2>Experiencia Laboral</h2>
+
+                <div class="experience-item">
+                    <h3>Proyect manager</h3>
+                    <span>Empresa TrashHunters | 2024-2024</span>
+                    <p>Responsable de la gestión del proyecto, coordinación de agenda y apoyo a la codificación.</p>
+                </div>
+
+                <div class="experience-item">
+                    <h3>Tester</h3>
+                    <span>Empresa Graham | 2025-2025</span>
+                    <p>Encargado de pruebas de software.</p>
+                </div>
+
+                <div class="experience-item">
+                    <h3>Instructor consultor</h3>
+                    <span>2024-2025</span>
+                    <p>Apoyo educativo en el área de programación a estudiantes del CECyT 9.</p>
+                </div>
+
+                <div class="experience-item">
+                    <h3>XP coach</h3>
+                    <span>Empresa Graham | 2025-2025</span>
+                    <p>Coordinación de proyecto y mejora de procesos internos de la organización.</p>
+                </div>
+            </section>
+        </div>
+            </div>
+        <div class="container-footer">
+            <footer>
+                <h2><a href="../index.html">Regreso a la página principal</a></h2>
+            </footer>
+        </div>
+    </div>
+</body>
 </html>
