--- a/index.html
+++ b/index.html
@@ -31,19 +31,19 @@
         <tbody>
             <tr>
                 <td>
-                    <a href="./01 curriculo/curriculo.html">01 Currículo</a>
+                    <a href="./01 curriculo/curriculo.html" class="practica-link">01 Currículo</a>
                 </td>
                 <td>Crear un currículo en HTML y CSS</td>
             </tr>
             <tr>
                 <td>
-                    <a href="./02 PrimerosPasos/estructura.html">02 Estructura</a>
+                    <a href="./02 PrimerosPasos/estructura.html" class="practica-link">02 Estructura</a>
                 </td>
                 <td>---</td>
             </tr>
             <tr>
                 <td>
-                    <a href="./03 login/inicio.html">03 Login</a>
+                    <a href="./03 login/inicio.html" class="practica-link">03 Login</a>
                 </td>
                 <td>Crear un Login en HTML y CSS</td>
             </tr>
