se agregó hipervínculo al index en la segunda práctica

--- a/01 curriculo/curriculo.html
+++ b/01 curriculo/curriculo.html
@@ -68,12 +68,11 @@
                     capacidad de trabajo en equipo
                 </p>
             </section>
-
-            <br>
-            <br>
             <br>
             <hr class="divider">
 
+            <br>
+            <br>
             <section class="experience">
                 <h2>Experiencia Laboral</h2>
 
@@ -105,7 +104,7 @@
             </div>
         <div class="container-footer">
             <footer>
-                <h2><a href="../index.html">Regreso a la página principal</a></h2>
+                <h2><a href="../index.html" class="index-link">Regreso a la página principal</a></h2>
             </footer>
         </div>
     </div>
