se modificó el html y css del login para ajustarse a la reubicación de la carpeta 'img'

--- a/02 PrimerosPasos/estructura.html
+++ b/02 PrimerosPasos/estructura.html
@@ -26,7 +26,7 @@
                 </aside>
             </div>
             <div class="container-footer">
-                <footer><h3><a href="../index.html" class="index-link">Regreso a la página principal</a></h3></footer>
+                <footer><a href="../index.html" class="index-link">Regreso a la página principal</a></footer>
             </div>
 
         </div>
