--- a/03 login/inicio.html
+++ b/03 login/inicio.html
@@ -24,11 +24,11 @@
     <a href="#">Recuperar contraseña</a>
     <div class="button">
         <button>
-            <img src="./css/image/facebook.png" alt="404">
+            <img src="./img/facebook.png" alt="404">
             <p>Facebook</p>
         </button>
         <button>
-            <img src="./css/image/google.png" alt="404">
+            <img src="./img/google.png" alt="404">
             <p>Google</p>
         </button>
     </div>
