se agrega un footer al index

--- a/index.html
+++ b/index.html
@@ -4,23 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ejemplo de manejador de versiones</title>
+    <link rel="icon" href="./img/favicon.png">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <header>Dereck Ruiz</header>
     <br>
     <p>Este es el portafolio de evidencias para la asignatura de programación web y pruebas</p>
-
-    <br>
-    <p>Aquí vamos a crear un portafolio para cada práctica</p>
-    <p>Cosas para tu Examen Parte 1
-        Queremos que tu portafolio sea hermoso y kawaii, 100% personalizado, se admite todo TODO.
-        Deberan de aplicar las reglas de Creación de Estilos de acuerdo a Material Desing
-        Primero Paleta de Colores 
-        Fuente o Tipografia
-        Iconografia
-        Imagenes
-    </p>
     <table class="container-table">
         <thead>
             <tr>
@@ -49,5 +39,8 @@
             </tr>
             </tbody>
     </table>
+    <footer class="container-footer">
+        <a href="#">Apuntes</a>
+    </footer>
 </body>
 </html>
