--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ejemplo de manejador de versiones</title>
+    <title>Portafolio progra web y pruebas de software</title>
     <link rel="icon" href="./img/favicon.png">
     <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -11,6 +11,7 @@
     <header>Dereck Ruiz</header>
     <br>
     <p>Este es el portafolio de evidencias para la asignatura de programación web y pruebas</p>
+    <br>
     <table class="container-table">
         <thead>
             <tr>
@@ -37,10 +38,16 @@
                 </td>
                 <td>Crear un Login en HTML y CSS</td>
             </tr>
+            <tr>
+                <td>
+                    <a href="./04 Formulario/formulario.html" class="practica-link">04 Formulario</a>
+                </td>
+                <td>---</td>
+            </tr>
             </tbody>
     </table>
     <footer class="container-footer">
-        <a href="#">Apuntes</a>
+        <a href="./apuntes/apunte.html">Apuntes</a>
     </footer>
 </body>
 </html>
