se creó la estructura para trabajar los ejercicios de la práctica 05

--- a/I/01 curriculo/curriculo.html
+++ b/I/01 curriculo/curriculo.html
@@ -104,7 +104,7 @@
             </div>
         <div class="container-footer">
             <footer>
-                <h2><a href="../index.html" class="index-link">Regreso a la página principal</a></h2>
+                <h2><a href="../../index.html" class="index-link">Regreso a la página principal</a></h2>
             </footer>
         </div>
     </div>
