--- a/apuntes/apunte.html
+++ b/apuntes/apunte.html
@@ -7,6 +7,30 @@
 </head>
 <body>
     
+    <h1>Apuntes</h1>
+    
+    <h2>06/10/25</h2>
+    <h3>Progra web</h3>
+    <h4>Puntos para la tarea</h4>
+    <p>
+        Del ejercicio 1, tenemos que agregar el campo numero de meses y sera una inversion de maximo 18 meses
+    </p>
+    <p>
+        2 se deben de ingresar 3 ventas, un sueldo base, y despues calcular el monto total, debe de aparecer cuanto cobra por comision y la suma ttoal
+    </p>
+    <p>
+        3 se debe de ingresar un producto, con su precio y aplicarle el 15% y el sistema debe mostrar el producto, precio, descuento, total a pagar
+    </p>
+    <p>
+        4 se debe de ingresar C1, C2, C3, se aplica el promedio y su porcentaje, se ingresa TF y se aplica % y examen final y se aplica el % se debe de mostrar el total de calificacion
+    </p>
+    <p>    
+        5 se debe de ingresar cantidad h y cantidad de mujeres y mostrar sus % correspondientes
+    </p>
+    <p>    
+        6 calcular la edad de una persona
+        </p>
+
     <footer><a href="../index.html">Regresar al index</a></footer>
 </body>
 </html>
