--- a/index.html
+++ b/index.html
@@ -22,25 +22,37 @@
         <tbody>
             <tr>
                 <td>
-                    <a href="./01 curriculo/curriculo.html" class="practica-link">01 Currículo</a>
+                    <a href="./I/01 curriculo/curriculo.html" class="practica-link">01 Currículo</a>
                 </td>
                 <td>Crear un currículo en HTML y CSS</td>
             </tr>
             <tr>
                 <td>
-                    <a href="./02 PrimerosPasos/estructura.html" class="practica-link">02 Estructura</a>
+                    <a href="./I/02 PrimerosPasos/estructura.html" class="practica-link">02 Estructura</a>
                 </td>
                 <td>---</td>
             </tr>
             <tr>
                 <td>
-                    <a href="./03 login/inicio.html" class="practica-link">03 Login</a>
+                    <a href="./I/03 login/inicio.html" class="practica-link">03 Login</a>
                 </td>
                 <td>Crear un Login en HTML y CSS</td>
             </tr>
             <tr>
                 <td>
-                    <a href="./04 Formulario/formulario.html" class="practica-link">04 Formulario</a>
+                    <a href="./I/04 Formulario/formulario.html" class="practica-link">04 Formulario</a>
+                </td>
+                <td>---</td>
+            </tr>
+            <tr>
+                <td>
+                    <a href="./II/05 Ejercicios/Ejercicios.html" class="practica-link">05 Ejercicios</a>
+                </td>
+                <td>---</td>
+            </tr>
+            <tr>
+                <td>
+                    <a href="./II/06 Algoritmia/algoritmia.html" class="practica-link">06 Algoritmia</a>
                 </td>
                 <td>---</td>
             </tr>
