--- a/I/03 login/inicio.html
+++ b/I/03 login/inicio.html
@@ -33,7 +33,7 @@
         </button>
     </div>
 
-    <a href="../index.html"> Regresar al menú principal</a>
+    <a href="../../index.html"> Regresar al menú principal</a>
 
 </body>
 </html>
