--- a/I/04 Formulario/formulario.html
+++ b/I/04 Formulario/formulario.html
@@ -44,6 +44,6 @@
             <input type="reset" name="borrar" value="Borrar datos">
         </form>
     </div>
-    <footer><a href="../index.html">Retorno al index</a></footer>
+    <footer><a href="../../index.html">Retorno al index</a></footer>
 </body>
 </html>
