--- a/II/06 Algoritmia/algoritmia.html
+++ b/II/06 Algoritmia/algoritmia.html
@@ -28,7 +28,7 @@
                     <table class="problema-table" style="width: 45%;">
                         <thead>
                             <tr>
-                                <th> <em>x</em> </th>
+                                <th> <em>X</em> </th>
                                 <th>#</th>
                             </tr>
                         </thead>
@@ -58,7 +58,7 @@
                     <table class="problema-table" style="width: 45%;">
                         <thead>
                             <tr>
-                                <th> <em>y</em> </th>
+                                <th> <em>Y</em> </th>
                                 <th>#</th>
                             </tr>
                         </thead>
@@ -86,11 +86,26 @@
                         </tbody>
                     </table>
                 </div>
-                <button type="button" class="problema-button" style="margin-top: 1rem;" onclick="">Invertir Palabras</button>
-                <pre class="problema-output" id="p1-output">Esperando datos...</pre>
+                <button type="button" class="problema-button" style="margin-top: 1rem;" onclick="">Calcular vector</button>
+                <pre class="problema-output" id="p2-output">Esperando datos...</pre>
             </div>
         </div>
     </div>
+    <div class="container">
+        <div class="problema-container">
+            <h2 class="problema-title">Problema 1</h2>
+            <h3>Dada una lista de palabras, encontrar la palabra que más número de caracteres únicos tenga
+                <br>
+            Por Ejemplo: CASA = 3 (c,a,s), PERRO = 4 (p, e, r, o)
+            <br>
+            Considera solamente el abecedario A-Z, en mayúsculas, Las palabras ingresadas deben estar separadas por una coma, ne se aceptan espacios
+            </h3>
+            <div class="porblema-content">
+                <input type="text" class="problema-input" placeholder="Ingresa las palabras separadas por una coma" id="p3-input">
+                <button type="button" class="problema-button" style="margin-top: 1rem;" onclick="">Calcular Palabras</button>
+                <pre class="problema-output" id="p1-output">Esperando datos...</pre>
+            </div>
+        </div>
     <footer><a href="../../index.html">Regreso al index</a></footer>
 </body>
 </html>
