--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <td>
                     <a href="./I/02 PrimerosPasos/estructura.html" class="practica-link">02 Estructura</a>
                 </td>
-                <td>---</td>
+                <td>Estructura básica de una página web</td>
             </tr>
             <tr>
                 <td>
@@ -42,24 +42,25 @@
                 <td>
                     <a href="./I/04 Formulario/formulario.html" class="practica-link">04 Formulario</a>
                 </td>
-                <td>---</td>
+                <td>Ejemplo de formulario con método "get"</td>
             </tr>
             <tr>
                 <td>
                     <a href="./II/05 Ejercicios/Ejercicios.html" class="practica-link">05 Ejercicios</a>
                 </td>
-                <td>---</td>
+                <td>Ejercicios de programación web con JS</td>
             </tr>
             <tr>
                 <td>
                     <a href="./II/06 Algoritmia/algoritmia.html" class="practica-link">06 Algoritmia</a>
                 </td>
-                <td>---</td>
+                <td>Problemas de algoritmia en javascript</td>
             </tr>
             </tbody>
     </table>
-    <footer class="container-footer">
-        <a href="./apuntes/apunte.html">Apuntes</a>
-    </footer>
+
+    <div class="container-footer">
+        <footer><a href="./apuntes/apunte.html">Apuntes</a></footer>
+    </div>
 </body>
 </html>
