--- a/II/05 Ejercicios/Ejercicios.html
+++ b/II/05 Ejercicios/Ejercicios.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/ejerciciosstyle.css">
-    <title>05 Ejercicios</title>
+    <title>05 Lista de Ejercicios</title>
 </head>
 <body>
     <table class="container-table">
