--- a/II/06 Algoritmia/algoritmia.html
+++ b/II/06 Algoritmia/algoritmia.html
@@ -3,109 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./css/stylealgoritmia.css">
+    <title>06 Lista de problemas de algoritmia</title>
 </head>
 <body>
-    <div class="container">
-        <div class="problema-container">
-            <h2 class="problema-title">Problema 1</h2>
-            <h3>Dada una lista de palabras separadas por un espacio, invierte el orden de dichas palabras. Las palabras pueden estar separadas unicamente por espacios</h3>
-            <div class="porblema-content">
-                <input type="text" class="problema-input" placeholder="Ingresa las palabras separadas por un espacio:" id="p1-input">
-                <button type="button" class="problema-button" style="margin-top: 1rem;" onclick="">Invertir Palabras</button>
-                <pre class="problema-output" id="p1-output">Esperando datos...</pre>
-            </div>
-        </div>
-    </div>
-    <div class="container">
-        <div class="problema-container">
-            <h2 class="problema-title">Problema 2</h2>
-            <h3>Dados dos vectores <em>v1=(x1, x2, x3, x4, ... ,xN), v2=(y1, y2, y3, y4, ... ,yN),</em> y teniendo permitido permutar el orden de los elementos de dicho vector, enconctrar el mínimo producto escalar entre ambos vectores</h3>
-            <br>
-            (El producto escalar se forma de la siguiente manera: <em>x1*y1 + x2*y2 + x3*y3 + x4*y4 + xN*yN</em>)
-            <div class="porblema-content">
-                <div class="tables" style="width: 100%; display: flex; justify-content: center;">
-                    <table class="problema-table" style="width: 45%;">
-                        <thead>
-                            <tr>
-                                <th> <em>X</em> </th>
-                                <th>#</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td></td>
-                                <td><input type="number" class="problema-input" id="p2-x1"></td>
-                            </tr>
-                            <tr>
-                                <td></td>
-                                <td><input type="number" class="problema-input" id="p2-x2"></td>
-                            </tr>
-                            <tr>
-                                <td></td>
-                                <td><input type="number" class="problema-input" id="p2-x3"></td>
-                            </tr>
-                            <tr>
-                                <td></td>
-                                <td><input type="number" class="problema-input" id="p2-x4"></td>
-                            </tr>
-                            <tr>
-                                <td></td>
-                                <td><input type="number" class="problema-input" id="p2-x5"></td>
-                            </tr>
-                        </tbody>
-                    </table>
-                    <table class="problema-table" style="width: 45%;">
-                        <thead>
-                            <tr>
-                                <th> <em>Y</em> </th>
-                                <th>#</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td></td>
-                                <td><input type="number" class="problema-input" id="p2-y1"></td>
-                            </tr>
-                            <tr>
-                                <td></td>
-                                <td><input type="number" class="problema-input" id="p2-y2"></td>
-                            </tr>
-                            <tr>
-                                <td></td>
-                                <td><input type="number" class="problema-input" id="p2-y3"></td>
-                            </tr>
-                            <tr>
-                                <td></td>
-                                <td><input type="number" class="problema-input" id="p2-y4"></td>
-                            </tr>
-                            <tr>
-                                <td></td>
-                                <td><input type="number" class="problema-input" id="p2-y5"></td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-                <button type="button" class="problema-button" style="margin-top: 1rem;" onclick="">Calcular vector</button>
-                <pre class="problema-output" id="p2-output">Esperando datos...</pre>
-            </div>
-        </div>
-    </div>
-    <div class="container">
-        <div class="problema-container">
-            <h2 class="problema-title">Problema 1</h2>
-            <h3>Dada una lista de palabras, encontrar la palabra que más número de caracteres únicos tenga
-                <br>
-            Por Ejemplo: CASA = 3 (c,a,s), PERRO = 4 (p, e, r, o)
-            <br>
-            Considera solamente el abecedario A-Z, en mayúsculas, Las palabras ingresadas deben estar separadas por una coma, ne se aceptan espacios
-            </h3>
-            <div class="porblema-content">
-                <input type="text" class="problema-input" placeholder="Ingresa las palabras separadas por una coma" id="p3-input">
-                <button type="button" class="problema-button" style="margin-top: 1rem;" onclick="">Calcular Palabras</button>
-                <pre class="problema-output" id="p1-output">Esperando datos...</pre>
-            </div>
-        </div>
+    
+    <table class="container-table">
+        <thead>
+            <tr>
+                <th>Ejercicio</th>
+                <th>Descripción</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>
+                    <a href="./problema1/problemaa1.html" class="practica-link">01 palabras</a>
+                </td>
+                <td>Invertir orden de palabras dadas</td>
+            </tr>
+            <tr>
+                <td>
+                    <a href="./problema2/problemaa2.html" class="practica-link">02 vector</a>
+                </td>
+                <td>Calculo de vector</td>
+            </tr>
+            <tr>
+                <td>
+                    <a href="./problema3/problemaa3.html" class="practica-link">03 caracteres</a>
+                </td>
+                <td>Cantidad de caracteres</td>
+            </tr>
+            </tbody>
+    </table>
+    
     <footer><a href="../../index.html">Regreso al index</a></footer>
 </body>
 </html>
