se modificó el ejercicio 1 de la práctica cinco para ajustarse a las especificaciones sobre los meses de interés

--- a/II/05 Ejercicios/Ejercicio 1/ejercicio1.html
+++ b/II/05 Ejercicios/Ejercicio 1/ejercicio1.html
@@ -15,10 +15,19 @@
                         <table class="table">
                             <tr>
                                 <td>
-                                    introduce la cantidad que deseas invertir por todo un año
+                                    introduce la cantidad que deseas invertir y los meses de inversión
                                 </td>
                                 <td>
                                     <input type="text" name="cantidad" id="cantidadi" onkeypress="return validarn(event)">
+                                </td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    Intruduce el <b><em>número de meses</em></b> (Máximo 18 meses)
+                                </td>
+                                <td>
+                                    <input type="text" name="meses" id="mesesi" onkeypress="return validarn(event)">
                                 </td>
                             </tr>
                             <tr>
