--- a/II/05 Ejercicios/Ejercicio 2/ejercicio2.html
+++ b/II/05 Ejercicios/Ejercicio 2/ejercicio2.html
@@ -3,12 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./css/styleejercicio2.css">
+    <title>Ejercicio 2</title>
 </head>
 <body>
     
 
     
-    <footer><a href="../../05 Ejercicios/Ejercicios.html">regersar a la lista de los ejercicios</a></footer>
+    <div class="container-footer">
+        <footer><a href="../../05 Ejercicios/Ejercicios.html">regersar a la lista de los ejercicios</a></footer>
+    </div>
 </body>
 </html>
