se corrigieron errores de estilo

--- a/II/05 Ejercicios/Ejercicios.html
+++ b/II/05 Ejercicios/Ejercicios.html
@@ -19,13 +19,13 @@
                 <td>
                     <a href="./Ejercicio 1/ejercicio1.html" class="practica-link">01 Formulario</a>
                 </td>
-                <td>---</td>
+                <td>Cálculo de inversión</td>
             </tr>
             <tr>
                 <td>
-                    <a href="./Ejercicio 2/ejercicio2.html" class="practica-link">02 </a>
+                    <a href="./Ejercicio 2/ejercicio2.html" class="practica-link">02 Sueldo y comisiones</a>
                 </td>
-                <td>---</td>
+                <td>Cálculo de sueldo</td>
             </tr>
             <tr>
                 <td>
