se concluye el ejercicio 3 de la práctica 05 (HTML, CSS, JS)

--- a/II/05 Ejercicios/Ejercicio 1/ejercicio1.html
+++ b/II/05 Ejercicios/Ejercicio 1/ejercicio1.html
@@ -15,7 +15,7 @@
                         <table class="table">
                             <tr>
                                 <td>
-                                    introduce la cantidad que deseas invertir y los meses de inversión
+                                    introduce la cantidad que deseas invertir
                                 </td>
                                 <td>
                                     <input type="text" name="cantidad" id="cantidadi" onkeypress="return validarn(event)">
