--- a/II/05 Ejercicios/Ejercicios.html
+++ b/II/05 Ejercicios/Ejercicios.html
@@ -29,9 +29,9 @@
             </tr>
             <tr>
                 <td>
-                    <a href="./Ejercicio 3/ejercicio3.html" class="practica-link">03 </a>
+                    <a href="./Ejercicio 3/ejercicio3.html" class="practica-link">03 Tienda</a>
                 </td>
-                <td>---</td>
+                <td>Consultar precio con descuento</td>
             </tr>
             <tr>
                 <td>
