pre de ejercicio 4 práctica 5

--- a/II/05 Ejercicios/Ejercicios.html
+++ b/II/05 Ejercicios/Ejercicios.html
@@ -35,9 +35,9 @@
             </tr>
             <tr>
                 <td>
-                    <a href="./Ejercicio 4/ejercicio4.html" class="practica-link">04 </a>
+                    <a href="./Ejercicio 4/ejercicio4.html" class="practica-link">04 Calificación</a>
                 </td>
-                <td>---</td>
+                <td>Calcular calificación de alumno</td>
             </tr>
             <tr>
                 <td>
