Se termina el ejercicio 4 de la práctica 05

--- a/II/05 Ejercicios/Ejercicio 4/ejercicio4.html
+++ b/II/05 Ejercicios/Ejercicio 4/ejercicio4.html
@@ -75,10 +75,10 @@
                             </tr>
                             <tr>
                                 <td>
-                                    Sus comisiones y su sueldo neto:
+                                    Sus calificaciones son:
                                 </td>
                                 <td>
-                                    <input type="text" name="" id="" readonly="readonly" class="output">
+                                    <input type="text" name="output1" id="calificacionf" readonly="readonly" class="output">
                                 </td>
                             </tr>
                             <tr>
@@ -95,6 +95,6 @@
         <footer><a href="../../05 Ejercicios/Ejercicios.html">regersar a la lista de los ejercicios</a></footer>
     </div>
     
-    <script src="./javascript/funcionese2.js"></script>
+    <script src="./javascript/funcionese4.js"></script>
 </body>
 </html>
