Se concluye el ejercicio 5 de la práctica 05

--- a/II/05 Ejercicios/Ejercicio 4/ejercicio4.html
+++ b/II/05 Ejercicios/Ejercicio 4/ejercicio4.html
@@ -28,7 +28,7 @@
                                     ingrese su segunda calificación parcial
                                 </td>
                                 <td>
-                                    <input type="text" name="calificacion" id="calificacion2" onkeypress="return (event)">
+                                    <input type="text" name="calificacion" id="calificacion2" onkeypress="return validarn(event)">
                                 </td>
                             </tr>
                             <tr>
