--- a/II/05 Ejercicios/Ejercicios.html
+++ b/II/05 Ejercicios/Ejercicios.html
@@ -41,9 +41,9 @@
             </tr>
             <tr>
                 <td>
-                    <a href="./Ejercicio 5/ejercicio5.html" class="practica-link">05 </a>
+                    <a href="./Ejercicio 5/ejercicio5.html" class="practica-link">05 Censo</a>
                 </td>
-                <td>---</td>
+                <td>Conteo de hombres y mujeres</td>
             </tr>
             <tr>
                 <td>
