se concluye el ejercicio 6 de la práctica 05

--- a/II/05 Ejercicios/Ejercicios.html
+++ b/II/05 Ejercicios/Ejercicios.html
@@ -47,9 +47,9 @@
             </tr>
             <tr>
                 <td>
-                    <a href="./Ejercicio 6/ejercicio6.html" class="practica-link">06 </a>
+                    <a href="./Ejercicio 6/ejercicio6.html" class="practica-link">06 Cálculo de edad</a>
                 </td>
-                <td>---</td>
+                <td>Algoritmo para calcular edad</td>
             </tr>
             </tbody>
     </table>
