mejoras generales al estilo de la práctica 05

--- a/II/05 Ejercicios/Ejercicios.html
+++ b/II/05 Ejercicios/Ejercicios.html
@@ -54,8 +54,10 @@
             </tbody>
     </table>
     
-    <footer class="container-footer">
-        <a href="../../index.html">Regreso al index</a>
-    </footer>
+    <div class="container-footer">
+        <footer>
+            <a href="../../index.html">Regreso al index</a>
+        </footer>
+    </div>
 </body>
 </html>
