problema 2 práctica 06 terminada

--- a/II/06 Algoritmia/problema2/problemaa2.html
+++ b/II/06 Algoritmia/problema2/problemaa2.html
@@ -81,6 +81,9 @@
         </div>
     </div>
 
-    <footer><a href="../../06 Algoritmia/algoritmia.html">regersar a la lista de los ejercicios</a></footer>
+    <div class="container-footer">
+        <footer><a href="../../06 Algoritmia/algoritmia.html">regersar a la lista de los ejercicios</a></footer>
+    </div>
+    <script src="./javascript/funcionesp2.js"></script>
 </body>
 </html>
