--- a/II/06 Algoritmia/problema2/problemaa2.html
+++ b/II/06 Algoritmia/problema2/problemaa2.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Problema 1</title>
+    <link rel="stylesheet" href="./css/stylealgp2.css">
 </head>
 <body>
     <div class="container">
@@ -75,7 +76,7 @@
                         </tbody>
                     </table>
                 </div>
-                <button type="button" class="problema-button" style="margin-top: 1rem;" onclick="">Calcular vector</button>
+                <button type="button" class="problema-button" style="margin-top: 1rem;" onclick="problema2()">Calcular vector</button>
                 <pre class="problema-output" id="p2-output">Esperando datos...</pre>
             </div>
         </div>
