--- a/apuntes/apunte.html
+++ b/apuntes/apunte.html
@@ -30,6 +30,22 @@
     <p>    
         6 calcular la edad de una persona
         </p>
+        <br><br>
+        <h2>13/10/25</h2>
+        <h3>Progra web</h3>
+        <h4>Apunte</h4>
+        <p>
+            JS Manejaa variables del siguiente modo:
+        </p>
+        <p>
+            var -> una variable de acceso local y global, dependiendo de donde se declare.
+        </p>
+        <p>
+            let -> es una variable "proteigda", solo se puede hacer uso dentro de la función o bloque donde se declara.
+        </p>
+        <p>
+            const -> es una variable que no puede cambiar su valor, es decir, una constante
+        </p>
 
     <footer><a href="../index.html">Regresar al index</a></footer>
 </body>
