--- a/index.html
+++ b/index.html
@@ -56,6 +56,12 @@
                 </td>
                 <td>Problemas de algoritmia en javascript</td>
             </tr>
+            <tr>
+                <td>
+                    <a href="./II/06 Algoritmia/algoritmia.html" class="practica-link">07 javascript Intermedio</a>
+                </td>
+                <td>Ejercicios de programación web con JS</td>
+            </tr>
             </tbody>
     </table>
 
