Se termina la práctica del rompecabezas

--- a/index.html
+++ b/index.html
@@ -62,6 +62,12 @@
                 </td>
                 <td>Ejercicios de programación web con JS</td>
             </tr>
+            <tr>
+                <td>
+                    <a href="./II/08 Rompecabezas/rompecabezas.html" class="practica-link">08 Rompecabezas</a>
+                </td>
+                <td>Rompecabezas</td>
+            </tr>
             </tbody>
     </table>
 
