--- a/II/08 Rompecabezas/rompecabezass/rompecabezasP.html
+++ b/II/08 Rompecabezas/rompecabezass/rompecabezasP.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ejemplo de Rompecabezas</title>
-    <link rel="stylesheet" href="./css/juego.css">
+    <title>Rompecabezas de Pokemon</title>
+    <link rel="stylesheet" href="./css/juego2.css">
 </head>
 <body>
     <div class="col-40">
@@ -19,7 +19,7 @@
             <div id="objetivo">
                 <h2>Objetivo del Juego</h2>
                 <div class="texto-centrado">
-                    <img src="./img/final.png" alt="No se encuentra el recurso">
+                    <img src="./img/finalp.png" alt="No se encuentra el recurso">
                 </div>
             </div>
             <div id="ultimo-mov">
@@ -31,28 +31,28 @@
     <div class="col-60">
         <div id="juego">
             <div id="pieza1" class="piezas">
-                <img src="./img/10.jpg" alt="No se encuentra el recurso">
+                <img src="./img/1.jpg" alt="No se encuentra el recurso">
             </div>
             <div id="pieza2" class="piezas">
-                <img src="./img/20.jpg" alt="No se encuentra el recurso">
+                <img src="./img/2.jpg" alt="No se encuentra el recurso">
             </div>
             <div id="pieza3" class="piezas">
-                <img src="./img/30.jpg" alt="No se encuentra el recurso">
+                <img src="./img/3.jpg" alt="No se encuentra el recurso">
             </div>
             <div id="pieza4" class="piezas">
-                <img src="./img/40.jpg" alt="No se encuentra el recurso">
+                <img src="./img/4.jpg" alt="No se encuentra el recurso">
             </div>
             <div id="pieza5" class="piezas">
-                <img src="./img/50.jpg" alt="No se encuentra el recurso">
+                <img src="./img/5.jpg" alt="No se encuentra el recurso">
             </div>
             <div id="pieza6" class="piezas">
-                <img src="./img/60.jpg" alt="No se encuentra el recurso">
+                <img src="./img/6.jpg" alt="No se encuentra el recurso">
             </div>
             <div id="pieza7" class="piezas">
-                <img src="./img/70.jpg" alt="No se encuentra el recurso">
+                <img src="./img/7.jpg" alt="No se encuentra el recurso">
             </div>
             <div id="pieza8" class="piezas">
-                <img src="./img/80.jpg" alt="No se encuentra el recurso">
+                <img src="./img/8.jpg" alt="No se encuentra el recurso">
             </div>
             <div id="pieza9" class="piezas">
 
@@ -61,5 +61,10 @@
     </div>
     <script src="./js/juego.js"></script>
 
+    <div class="container-footer">
+        <footer>
+            <a href="../rompecabezas.html">Regreso a la lista</a>
+        </footer>
+    </div>
 </body>
 </html>
